changes in 1.3.1.11
* Bug 345 Shuffle library issue in Draw tab
changes in 1.3.1.10
* Bug 352 Win points on the tournament organizer 
* Added simple Backup support
changes in 1.3.1.9
* Bug 350: Fixed possible data loss due to parsing error in collection and decks
changes in 1.3.1.8 
* Feature 349: Added "group by" card name, so can see total regardless of set
* Icon for Name column now should not take lots of space in tree mode, making groupping more useful
changes in 1.3.1.7 beta
* Feature 346 added commands to move & split and just split which can be triggered from keyboard with a counter
changes in 1.3.1.6 beta
* Feature 326 Sort by Date Added 
changes in 1.3.1.5
* More fixes in test play deck, added Notes columns for other stuff (like counters, face down, etc)
changes in 1.3.1.4
* Feature 179 Added feature to Play Test a Deck (via Draw page)
changes in 1.3.1.3
* Bug 343 Tournament perspective no longer works
* Bug 344 java.lang.NullPointerException on click 
changes in 1.3.1.2
* added preferences "work offline"
* supporting url in the custom price provider xml
changes in 1.3.1.1
* Currency type is now read from provider xml (only for custom providers)
* Bug 342 Sideboard issue when moving decks 
* Added Modern Event Deck set
* Feature 341 Add Set's date column as option for main view 
changes in 1.3.0.4
* Bug 336 Progress4 shows 25% for non-own cards 
* Added support for currency conversion for prices
* Bug 340 put only minimal information about each card into the collection's xml file
* Fixed bug with power aggregation and creature count
Bug 339 move card set related information from \.metadata to \magiccards 
changes in 1.3.0.1
* Updated platform to eclipse Kepler 4.3.2
* Update database with latest released sets (up to Apr 2014)
* Fixed split export format name in Card Export preferences
* Fixed ClassCastException when grouping by Location or Ownership
* Added more abilities and externalized abilities file so user can extend the list of abilities