@@ -1,5 +1,6 @@
 changes in 1.3.1.11
 * Bug 345 Shuffle library issue in Draw tab
+* Added log file path to bug report submission window
 changes in 1.3.1.10
 * Bug 352 Win points on the tournament organizer 
 * Added simple Backup support
